--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-          git add data/parkings_voiture.csv data/parkings_velo.csv
+          git add *.csv
           git commit -m "Mise à jour des données collectées"
           git push
         env:
